--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,29 +464,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "FILTRE.__init__() takes 6 positional arguments but 7 were given",
+     "ename": "NameError",
+     "evalue": "name 'filtres_standard' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[186], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m Filtre_1 \u001b[38;5;241m=\u001b[39m \u001b[43mFILTRE\u001b[49m\u001b[43m(\u001b[49m\u001b[43mFiltre_id_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mFiltre_fc_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTime_Sample\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mFiltre_Ordre_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mFiltre_type_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSinus_Bruité\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m liste_filtre \u001b[38;5;241m=\u001b[39m [Filtre_1] \u001b[38;5;66;03m#ajoute en fin de liste le filtre_1\u001b[39;00m\n\u001b[0;32m      5\u001b[0m Filtre_2 \u001b[38;5;241m=\u001b[39m FILTRE(Filtre_id_2, Filtre_fc_2, Time_Sample, Filtre_Ordre_2, Filtre_type_2, Sinus_Bruité)\n",
-      "\u001b[1;31mTypeError\u001b[0m: FILTRE.__init__() takes 6 positional arguments but 7 were given"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[193], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m Filtre_1 \u001b[38;5;241m=\u001b[39m \u001b[43mfiltres_standard\u001b[49m(Filtre_type_1)\n\u001b[0;32m      3\u001b[0m liste_filtre \u001b[38;5;241m=\u001b[39m [Filtre_1] \u001b[38;5;66;03m#ajoute en fin de liste le filtre_1\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;03m\"\"\"Filtre_2 = FILTRE(Filtre_id_2, Filtre_fc_2, Time_Sample, Filtre_Ordre_2, Filtre_type_2, Sinus_Bruité)\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \n\u001b[0;32m      7\u001b[0m \u001b[38;5;124;03mliste_filtre = [Filtre_2] #ajoute en fin de liste le filtre_2\"\"\"\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filtres_standard' is not defined"
      ]
     }
    ],
    "source": [
-    "Filtre_1 = FILTRE(Filtre_id_1, Filtre_fc_1, Time_Sample, Filtre_Ordre_1, Filtre_type_1, Sinus_Bruité)\n",
+    "Filtre_1 = filtres_standard(Filtre_type_1)\n",
     "\n",
     "liste_filtre = [Filtre_1] #ajoute en fin de liste le filtre_1\n",
     "\n",
-    "Filtre_2 = FILTRE(Filtre_id_2, Filtre_fc_2, Time_Sample, Filtre_Ordre_2, Filtre_type_2, Sinus_Bruité)\n",
+    "\"\"\"Filtre_2 = FILTRE(Filtre_id_2, Filtre_fc_2, Time_Sample, Filtre_Ordre_2, Filtre_type_2, Sinus_Bruité)\n",
     "\n",
-    "liste_filtre = [Filtre_2] #ajoute en fin de liste le filtre_2\n",
+    "liste_filtre = [Filtre_2] #ajoute en fin de liste le filtre_2\"\"\"\n",
     "\n",
     "for i in liste_filtre:\n",
     "    plot_graph(Absicisse_Graph, i.calculfiltre(), 'Signal Filtré par RC', 'Temps [s]', 'Amplitude [V]', 'Signal Filtré par RC')\n"
