--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "'def butter_lowpass_filter(signal_a_filtrer, freq_coupure, fs, ordre, type_filtre):\\n    freq_nyquist = 0.5 * fs\\n    normal_freq_coupure = freq_coupure / freq_nyquist\\n    b, a = butter(ordre, normal_freq_coupure, btype=type_filtre, analog=False)\\n    y = lfilter(b, a, signal_a_filtrer)\\n    return y'"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Section 3 : Signaux"
+    "Section 3 : Signal d'entrée"
    ]
   },
   {
@@ -288,24 +288,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
+     "ename": "TypeError",
+     "evalue": "Signal_Original.__init__() takes 6 positional arguments but 7 were given",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[256], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m Generation_Signal_Entrée \u001b[38;5;241m=\u001b[39m \u001b[43mSignal_Original\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msinus\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSinus_Amplitude\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSinus_Frequence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTimeInOperation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTime_Sample\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m Signal_Entree \u001b[38;5;241m=\u001b[39m Generation_Signal_Entrée\u001b[38;5;241m.\u001b[39mGeneration_Sinus()\n\u001b[0;32m      3\u001b[0m plot_graph(Absicisse_Graph, Signal_Entree, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSignal Sinus\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTemps [s]\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAmplitude [V]\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSignal Sinus\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\farin\\Documents\\GitHub\\EI---KF\\CLASS.py:14\u001b[0m, in \u001b[0;36mSignal_Original.__init__\u001b[1;34m(self, Signal_Type, Amplitude, Frequence, Durée, Fs)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Calcul du nombre d'échantillons\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mN \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mFs \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mDurée)\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mt \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mDurée, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mN, endpoint\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[266], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m Generation_Signal_Entrée \u001b[38;5;241m=\u001b[39m \u001b[43mSignal_Original\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msinus\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSinus_Amplitude\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSinus_Frequence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTimeInOperation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTime_Sample\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mAbsicisse_Graph\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m Signal_Entree \u001b[38;5;241m=\u001b[39m Generation_Signal_Entrée\u001b[38;5;241m.\u001b[39mGeneration_Sinus()\n\u001b[0;32m      3\u001b[0m plot_graph(Absicisse_Graph, Signal_Entree, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSignal Sinus\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTemps [s]\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAmplitude [V]\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSignal Sinus\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Signal_Original.__init__() takes 6 positional arguments but 7 were given"
      ]
     }
    ],
    "source": [
-    "Generation_Signal_Entrée = Signal_Original(\"sinus\", Sinus_Amplitude, Sinus_Frequence, TimeInOperation, Time_Sample)\n",
+    "Generation_Signal_Entrée = Signal_Original(\"sinus\", Sinus_Amplitude, Sinus_Frequence, TimeInOperation, Time_Sample, Absicisse_Graph)\n",
     "Signal_Entree = Generation_Signal_Entrée.Generation_Sinus()\n",
     "plot_graph(Absicisse_Graph, Signal_Entree, 'Signal Sinus', 'Temps [s]', 'Amplitude [V]', 'Signal Sinus')\n",
     "\n",
