Update titres et descriptions

--- a/EI_KF.ipynb
+++ b/EI_KF.ipynb
@@ -485,7 +485,7 @@
    "id": "1201425d",
    "metadata": {},
    "source": [
-    "Section 3.4. : Passe-bas"
+    "Section 3.2. : Capteur Passe-bas"
    ]
   },
   {
@@ -759,7 +759,7 @@
    "id": "ec01520b",
    "metadata": {},
    "source": [
-    "5.2. : Mise en graphique du bruit blanc Gaussien"
+    "5.2. : Mise en graphique du bruit blanc gaussien"
    ]
   },
   {
@@ -1079,7 +1079,7 @@
    "id": "cceeb411",
    "metadata": {},
    "source": [
-    "5.8. : Mise en graphique du ripple pré/post Kalman"
+    "5.7. : Mise en graphique du ripple pré/post Kalman"
    ]
   },
   {
@@ -1122,7 +1122,7 @@
    "id": "927447d4",
    "metadata": {},
    "source": [
-    "5.9. : Mise en graphique de la moyenne glissante et du filtre de Kalman"
+    "5.8. : Mise en graphique de la moyenne glissante et du filtre de Kalman"
    ]
   },
   {
@@ -1165,7 +1165,7 @@
    "id": "19ba1568",
    "metadata": {},
    "source": [
-    "Calcul déphasage des signaux (bruité, Kalman et moyenne glissante)"
+    "Section 6 : Calcul déphasage des signaux (bruité, Kalman et moyenne glissante)"
    ]
   },
   {
@@ -1203,7 +1203,15 @@
    "id": "21579dbe",
    "metadata": {},
    "source": [
-    "Boucle de 50 pour tester la répétitivité"
+    "Section 7 : Export en .csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d0a4d46",
+   "metadata": {},
+   "source": [
+    "Boucle de 50 pour tester la répétitivité (à (dé-)commenter)"
    ]
   },
   {
@@ -1291,6 +1299,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03718e27",
+   "metadata": {},
+   "source": [
+    "Section 8 : Export de l'animation en .gif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea0a9678",
+   "metadata": {},
+   "source": [
+    "Réalisation d'un fichier .gif pour l'animation du filtre de Kalman en cas de perte temporaire de donnée"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "e61ea78e",
@@ -1359,6 +1383,14 @@
   {
    "cell_type": "markdown",
    "id": "5eba13cc",
+   "metadata": {},
+   "source": [
+    "Section 9 : Monte Carlo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02fcc028",
    "metadata": {},
    "source": [
     "Test Monte Carlo sur 100 itérations (controle du signal bruité, du signal filtré par capteur et du signal filtré par Kalman)"
